--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
     <h2>Provideing cool pictures since 2017</h2>
      
       <div class="btn-group">
-   <a href=""><button class="button" style="vertical-align:middle"><span>space phots</span></button></a>
-     <a href="who.html"><button class="button" style="vertical-align:middle"><span>mountian photos</span></button></a>
-    <a href=""><button class="button" style="vertical-align:middle"><span>wildlife photos</span></button></a>
-    <a href=""><button class="button" style="vertical-align:middle"><span>food photos</span></button></a>
+   <a href=""><button class="button" style="vertical-align:middle"><span>space</span></button></a>
+     <a href="who.html"><button class="button" style="vertical-align:middle"><span>mountian</span></button></a>
+    <a href=""><button class="button" style="vertical-align:middle"><span>wildlife</span></button></a>
+    <a href=""><button class="button" style="vertical-align:middle"><span>food</span></button></a>
       </div>
   </center>
 </html>
