--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     background-color: #a3a375;
 }
         body{
-    background: url("") no-repeat top center fixed;
+    background: url("http://cdn.pcwallart.com/images/cosmos-space-nasa-wallpaper-1.jpg") no-repeat top center fixed;
     background-size: cover;
     margin:  0;
     padding: 0;
