--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       <style>
       h1 {
         text-align: center,
-        color: #000000,
+        color: #ffffff,
       }
       h2 {
         text-align: center,
+        color: #ffffff,
       }
         
      .btn-group .button {
