--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
       </style>
 
       
-    <h1>WowPhotos</h1>
-    <h2>Provideing cool pictures since 2017</h2>
+    <h1 style="color:#ffffff">WowPhotos</h1>
+    <h2 style="color:#ffffff">Provideing cool pictures since 2017</h2>
      
       <div class="btn-group">
    <a href=""><button class="button" style="vertical-align:middle"><span>space</span></button></a>
