--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
   <body>
     <center>
       <style>
+        body {
+          
+        }
       h1 {
         text-align: center,
         color: #ffffff,
-      }
+font-family: "Impact",Charcoa, sans-serif;
+        }
+      
       h2 {
         text-align: center,
         color: #ffffff,
