--- a/wildlife.html
+++ b/wildlife.html
@@ -13,6 +13,12 @@
     </style>
     </head
     <body>
+    <div class="polaroid">
+      <img src=""  alt="" style="">
+          <div class="container">
+      <p> </p>
+    </div>
+    </div>
     
     </body>
 </html>
