--- a/wildlife.html
+++ b/wildlife.html
@@ -24,7 +24,7 @@ div.container {
       
       
     </style>
-    </head
+  </head>
     <body>
     <div class="polaroid">
       <img src="http://cdn.pcwallart.com/images/elk-in-snow-wallpaper-4.jpg" alt="elk" style="width:100%">
