--- a/wildlife.html
+++ b/wildlife.html
@@ -26,12 +26,13 @@ div.container {
     </style>
   </head>
     <body>
+      <center>
     <div class="polaroid">
       <img src="http://cdn.pcwallart.com/images/elk-in-snow-wallpaper-4.jpg" alt="elk" style="width:100%">
           <div class="container">
       <p>Elk in colorado</p>
     </div>
     </div>
-    
+      </center>
     </body>
 </html>
