--- a/wildlife.html
+++ b/wildlife.html
@@ -36,6 +36,18 @@ div.container {
     <p>Scenic Elk</p>
   </div>
 </div>
+    <div class="polaroid">
+  <img src="https://wallpaperscraft.com/image/wildlife_africa_elephant_duiker_pygmy_antelope_run_55841_1920x1080.jpg" alt="Ele" style="width:100%">
+  <div class="container">
+    <p>African wildlife</p>
+  </div>
+</div>
+    <div class="polaroid">
+  <img src="" alt="" style="width:100%">
+  <div class="container">
+    <p>Scenic Elk</p>
+  </div>
+</div>
 </center>
 </body>
 </html>
