--- a/wildlife.html
+++ b/wildlife.html
@@ -38,7 +38,7 @@ div.container {
 </style>
 </head>
 <body>
-  <button class="button button1">
+  <button class="button button1"></button>
   <center>
   <h1>WildLife</h1>
   
