--- a/wildlife.html
+++ b/wildlife.html
@@ -38,7 +38,9 @@ div.container {
 </style>
 </head>
 <body>
-  <button class="button button1"></button>
+  <center>
+  <button class="button button1">Back Home</button>
+    </center
   <center>
   <h1>WildLife</h1>
   
