--- a/wildlife.html
+++ b/wildlife.html
@@ -40,7 +40,7 @@ div.container {
 <body>
   <center>
   <button class="button button1">Back Home</button>
-    </center
+  </center>
   <center>
   <h1>WildLife</h1>
   
