--- a/wildlife.html
+++ b/wildlife.html
@@ -17,7 +17,7 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
-  .button {
+  .button1 {
     background-color: #4CAF50; 
     border: none;
     color: white;
