--- a/wildlife.html
+++ b/wildlife.html
@@ -18,7 +18,7 @@ div.container {
   padding: 10px 20px;
 }
   .button1 {
-    background-color: #4CAF50; 
+    background-color: #996633; 
     border: none;
     color: white;
     padding: 15px 32px;
