--- a/wildlife.html
+++ b/wildlife.html
@@ -39,7 +39,7 @@ div.container {
 </head>
 <body>
 
-  <button class="button button1">Back Home</button>
+  <a href="index.html"><button class="button button1">Back Home</button></a>
   <center>
   <h1>WildLife</h1>
   
