--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </style>
 
       
-    <h1 clas="sansserif" style="color:#ffffff">WowPhotos</h1>
+    <h1 class="sansserif" style="color:#ffffff">WowPhotos</h1>
     <h2 style="color:#ffffff">Providing cool pictures since 2017</h2>
      
       <div class="btn-group">
