--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         h1 {
            font-family: "Arial Black", Gadget, sans-serif;
         }
+        p {
+           font-family: "Arial Black", Gadget, sans-serif;
+        }
      
         body {
           
