--- a/wildlife.html
+++ b/wildlife.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <style>
+   h1 {
+      font-family: "Arial Black", Gadget, sans-serif;
+  }
   body {
     background-color: #999966;
 }
