--- a/wildlife.html
+++ b/wildlife.html
@@ -72,6 +72,30 @@ div.container {
     <p>Fuzzy Monkey</p>
   </div>
 </div>
+        <div class="polaroid">
+  <img src="" alt="lion" style="width:100%">
+  <div class="container">
+    <p>Fuzzy Monkey</p>
+  </div>
+</div>
+        <div class="polaroid">
+  <img src="" alt="tiger" style="width:100%">
+  <div class="container">
+    <p>Fuzzy Monkey</p>
+  </div>
+</div>
+        <div class="polaroid">
+  <img src="" alt="snake" style="width:100%">
+  <div class="container">
+    <p>Fuzzy Monkey</p>
+  </div>
+</div>
+        <div class="polaroid">
+  <img src="" alt="hippo" style="width:100%">
+  <div class="container">
+    <p>Fuzzy Monkey</p>
+  </div>
+</div>
 </center>
 </body>
 </html>
