--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
     <h2 style="color:#ffffff">Providing cool pictures since 2017</h2>
      
       <div class="btn-group">
-   <a href=""><button class="button" style="vertical-align:middle"><span>space</span></button></a>
-     <a href="who.html"><button class="button" style="vertical-align:middle"><span>mountian</span></button></a>
+   <a href=""><button class="button" style="vertical-align:middle"><span>sugestions</span></button></a>
+     <a href="who.html"><button class="button" style="vertical-align:middle"><span>space</span></button></a>
     <a href="wildlife.html"><button class="button" style="vertical-align:middle"><span>wildlife</span></button></a>
     <a href=""><button class="button" style="vertical-align:middle"><span>food</span></button></a>
       </div>
