--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
      
       <div class="btn-group">
    <a href=""><button class="button" style="vertical-align:middle"><span>sugestions</span></button></a>
-     <a href="who.html"><button class="button" style="vertical-align:middle"><span>space</span></button></a>
+     <a href="space.html"><button class="button" style="vertical-align:middle"><span>space</span></button></a>
     <a href="wildlife.html"><button class="button" style="vertical-align:middle"><span>wildlife</span></button></a>
     <a href=""><button class="button" style="vertical-align:middle"><span>food</span></button></a>
       </div>
