--- a/space.html
+++ b/space.html
@@ -61,9 +61,9 @@ div.container {
   </div>
 </div>
     <div class="polaroid">
-  <img src="https://wallpaperscraft.com/image/wildlife_africa_elephant_duiker_pygmy_antelope_run_55841_1920x1080.jpg" alt="" style="width:100%">
+  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic1509a.jpg" alt="25th" style="width:100%">
   <div class="container">
-    <p></p>
+    <p>Hubble space tellecope 25th anversay picture</p>
   </div>
 </div>
     <div class="polaroid">
