--- a/space.html
+++ b/space.html
@@ -73,9 +73,9 @@ div.container {
   </div>
 </div>
         <div class="polaroid">
-  <img src="https://wallpaperlayer.com/img/2015/3/lion-wallpaper-937-1043-hd-wallpapers.jpg" alt="" style="width:100%">
+  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic0506a.jpg" alt="whirl" style="width:100%">
   <div class="container">
-    <p></p>
+    <p>The whirl pool(m15)</p>
   </div>
 </div>
         <div class="polaroid">
