--- a/space.html
+++ b/space.html
@@ -91,7 +91,7 @@ div.container {
   </div>
 </div>
         <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic0604a.jpg" alt="starburst" style="width:100%">
+<img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic1105a.jpg" alt="Tarantula" style="width:100%">
   <div class="container">
     <p>Starburst</p>
   </div>
