--- a/food.html
+++ b/food.html
@@ -48,52 +48,52 @@ div.container {
   <h1>Space</h1>
   
 <div class="polaroid">
-  <img src="http://cdn.pcwallart.com/images/real-earth-from-space-nasa-wallpaper-3.jpg" alt="nearth" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>Earth at Night</p>
   </div>
 </div>
 
 <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic0715a.jpg" alt="scluster" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>Star cluster taken by Hubble space tellescope</p>
   </div>
 </div>
     <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic1509a.jpg" alt="25th" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>Hubble space tellecope 25th anversay picture</p>
   </div>
 </div>
     <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic1608a.jpg" alt="bubble" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>The bubble nebula taken by once agian the hubble space tellscope</p>
   </div>
 </div>
         <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic0506a.jpg" alt="whirl" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>The whirl pool(m15)</p>
   </div>
 </div>
         <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/opo9828c.jpg" alt="satern" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>satern in natral colors</p>
   </div>
 </div>
         <div class="polaroid">
-  <img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic0604a.jpg" alt="starburst" style="width:100%">
+  <img src="" alt="" style="width:100%">
   <div class="container">
     <p>starburst</p>
   </div>
 </div>
         <div class="polaroid">
-<img src="https://cdn.spacetelescope.org/archives/images/wallpaper2/heic1105a.jpg" alt="Tarantula" style="width:100%">
+<img src="" alt="" style="width:100%">
   <div class="container">
-    <p>Starburst</p>
+    <p></p>
   </div>
 </div>
 </center>
