--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
    <a href=""><button class="button" style="vertical-align:middle"><span>sugestions</span></button></a>
      <a href="space.html"><button class="button" style="vertical-align:middle"><span>space</span></button></a>
     <a href="wildlife.html"><button class="button" style="vertical-align:middle"><span>wildlife</span></button></a>
-    <a href=""><button class="button" style="vertical-align:middle"><span>food</span></button></a>
+    <a href="food.html"><button class="button" style="vertical-align:middle"><span>food</span></button></a>
       </div>
   </center>
 </html>
