--- a/sug.html
+++ b/sug.html
@@ -26,8 +26,10 @@ input[type=text]:focus {
 <p>Animated search input:</p>
 
 <form>
-  <input type="text" name="search" placeholder="Search..">
-</form>
-
+  <input type="text" name="First name" placeholder="Search..">
+  <input type="text name="Last name" placeholder="Serch...">
+    
+    </form>
+    
 </body>
 </html>
