--- a/sug.html
+++ b/sug.html
@@ -19,6 +19,24 @@ input[type=text] {
 input[type=text]:focus {
     width: 100%;
 }
+    input[type=text] {
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+    width: 100%;
+}
 </style>
 </head>
 <body>
@@ -26,8 +44,8 @@ input[type=text]:focus {
 <p>Animated search input:</p>
 
 <form>
-  <input type="text" name="First name" placeholder="Search..">
-  <input type="text name="Last name" placeholder="Serch...">
+  <input type="text" name="First name" placeholder="First name">
+  <input type="text name="Last name" placeholder="Last name">
     
     </form>
     
