--- a/sug.html
+++ b/sug.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-<style> 
+<style>
+    body {
+    background-color: #999966;
+}
 input[type=text] {
     width: 130px;
     box-sizing: border-box;
@@ -45,7 +48,7 @@ input[type=text]:focus {
 
 <form>
   <input type="text" name="First name" placeholder="First name">
-  <input type="text name="Last name" placeholder="Last name">
+  <input type="text" name="Last name" placeholder="Last name">
     
     </form>
     
