--- a/sug.html
+++ b/sug.html
@@ -1,5 +1,8 @@
 <html>
 <style>
+     body {
+      background-color: #999966;    
+     }
      .button1 {
     background-color: #996633; 
     border: none;
