--- a/sug.html
+++ b/sug.html
@@ -1,5 +1,27 @@
 <html>
 <style>
+     .button3 {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
      body {
       background-color: #999966;    
      }
@@ -75,7 +97,7 @@ div {
       <input type="text" id="sug" name="suggestion" placeholder="Your suggestion..">
          </form>
 </div>
-
+     <button class"button3">submit</button>
 </body>
 </html>
 
