--- a/sug.html
+++ b/sug.html
@@ -97,7 +97,9 @@ div {
       <input type="text" id="sug" name="suggestion" placeholder="Your suggestion..">
          </form>
 </div>
+     <center>
      <button class"button3">submit</button>
-</body>
+     </center>
+          </body>
 </html>
 
