--- a/sug.html
+++ b/sug.html
@@ -26,7 +26,7 @@
       background-color: #999966;    
      }
      .button1 {
-    background-color: #996633; 
+    background-color: #b8b894; 
     border: none;
     color: white;
     padding: 15px 32px;
