--- a/food.html
+++ b/food.html
@@ -22,7 +22,7 @@ div.container {
   padding: 10px 20px;
 }
   .button1 {
-    background-color: #996633; 
+    background-color:#b8b894; 
     border: none;
     color: white;
     padding: 15px 32px;
