--- a/food.html
+++ b/food.html
@@ -73,9 +73,9 @@ div.container {
   </div>
 </div>
         <div class="polaroid">
-  <img src="" alt="" style="width:100%">
+  <img src="http://www.seriouseats.com/images/2016/10/video-12.jpg" alt="bp" style="width:100%">
   <div class="container">
-    <p>The whirl pool(m15)</p>
+    <p>Baked potato</p>
   </div>
 </div>
         <div class="polaroid">
