--- a/sug.html
+++ b/sug.html
@@ -1,5 +1,14 @@
 <html>
 <style>
+    input[type=button], input[type=submit], input[type=reset] {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
      body {
       background-color: #999966;    
      }
@@ -76,7 +85,7 @@ div {
          </form>
 </div>
      <center>
-     <button class"button3">submit</button>
+     <input type="submit" value="Submit">
      </center>
           </body>
 </html>
