--- a/sug.html
+++ b/sug.html
@@ -85,7 +85,7 @@ div {
          </form>
 </div>
      <center>
-     <input type="submit" value="Submit">
+         <a href="thanks.html"><input type="submit" value="Submit"></a>
      </center>
           </body>
 </html>
