--- a/thanks.html
+++ b/thanks.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <style>
+    body {
+    background-color: #999966;
+}
+    
 div {
     background-color: lightgrey;
     width: 300px;
