--- a/sug.html
+++ b/sug.html
@@ -67,7 +67,7 @@ div {
 
 
 <div>
-  <form action="/action_page.php">
+  <form action="thank.html">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
