--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
 div {
     background-color: lightgrey;
     width: 300px;
-    border: 25px #666633;
+    border: 25px solid green;
     padding: 25px;
     margin: 25px;
 }
@@ -19,7 +19,7 @@ div {
 
 
 
-<center
+<center>
 <div>Thanks for you suggestion it will be taken in to acount.</div>
 </center>
 </body>
