--- a/thanks.html
+++ b/thanks.html
@@ -1,10 +1,6 @@
 <html>
 <head>
 <style>
-    body {
-    background-color: #999966;
-}
-    
 div {
     background-color: lightgrey;
     width: 300px;
@@ -17,10 +13,7 @@ div {
 <body>
 
 
+<div>Thank you for your suggestion it will be taken into acount</div>
 
-
-<center>
-<div>Thanks for you suggestion it will be taken in to acount.</div>
-</center>
 </body>
 </html>
