--- a/thanks.html
+++ b/thanks.html
@@ -1,10 +1,13 @@
 <html>
 <head>
 <style>
+    body {
+        
+    }
 div {
     background-color: lightgrey;
     width: 300px;
-    border: 25px solid green;
+    border: 25px solid #666633;
     padding: 25px;
     margin: 25px;
 }
