--- a/thanks.html
+++ b/thanks.html
@@ -15,8 +15,8 @@ div {
 </head>
 <body>
 
-
+<center>
 <div>Thank you for your suggestion it will be taken into acount</div>
-
+    </center>
 </body>
 </html>
