--- a/thanks.html
+++ b/thanks.html
@@ -32,7 +32,7 @@ div {
 </style>
 </head>
 <body>
-
+ <a href="index.html"><button class="button button1">Back Home</button></a>
 <center>
 <div>Thank you for your suggestion it will be taken into acount</div>
     </center>
