--- a/food.html
+++ b/food.html
@@ -87,7 +87,7 @@ div.container {
         <div class="polaroid">
   <img src="http://www.seriouseats.com/images/2014/12/20141208-prime-rib-guide-77.jpg" alt="prime" style="width:100%">
   <div class="container">
-    <p>sPrime Ribs</p>
+    <p>Prime Ribs</p>
   </div>
 </div>
         <div class="polaroid">
